--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,10 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:run": "node run-tests.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -23,5 +26,9 @@
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
     "speakeasy": "^2.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
